<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true">

        <Button

            android:id="@+id/app_set_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/icon_rt"
            android:text="@string/set_app"/>


        <Button
            android:id="@+id/about_app"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/icon_lt"
            android:text="@string/about_app"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/linearLayout">

        <Button
            android:id="@+id/theme_set_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/icon_rb"
            android:text="@string/theme"/>

        <Button
            android:id="@+id/My_theme_set_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/icon_lb"
            android:text="@string/my_theme"/>
    </LinearLayout>

</RelativeLayout>
